allow quotes in imported csv and make mass import more resilient