@@ -57,6 +57,8 @@ public class MassImportForm extends BaseForm {
     private String previousCsvSeparator = null;
     private List<String> metadataKeys = new LinkedList<>(Collections.singletonList("ID"));
     private List<CsvRecord> records = new LinkedList<>();
+    private String importedCsvHeaderLine = "";
+    private List<String> importedCsvLines = new LinkedList<>();
     private final List<Character> csvSeparatorCharacters = Arrays.asList(',', ';');
     private final MassImportService massImportService = ServiceManager.getMassImportService();
     private final AddMetadataDialog addMetadataDialog = new AddMetadataDialog(this);
@@ -106,9 +108,11 @@ public class MassImportForm extends BaseForm {
             List<String> csvLines = massImportService.getLines(file);
             resetValues();
             if (!csvLines.isEmpty()) {
+                importedCsvHeaderLine = csvLines.get(0);
                 metadataKeys = new LinkedList<>(Arrays.asList(csvLines.get(0).split(csvSeparator, -1)));
                 if (csvLines.size() > 1) {
-                    records = massImportService.parseLines(csvLines.subList(1, csvLines.size()), csvSeparator);
+                    importedCsvLines = csvLines.subList(1, csvLines.size());
+                    records = massImportService.parseLines(importedCsvLines, csvSeparator);
                 }
             }
         } catch (IOException e) {
@@ -126,8 +130,8 @@ public class MassImportForm extends BaseForm {
      * Event listender function called when user switches CSV separator character used to split text lines into cells.
      */
     public void changeSeparator() {
-        metadataKeys = List.of(String.join(previousCsvSeparator, metadataKeys).split(csvSeparator));
-        records = massImportService.updateSeparator(records, previousCsvSeparator, csvSeparator);
+        metadataKeys = new LinkedList<>(Arrays.asList(importedCsvHeaderLine.split(csvSeparator, -1)));
+        records = massImportService.parseLines(importedCsvLines, csvSeparator);
     }
 
     /**
